Terminado Traslacion y rectangulo y cuadrado

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@
   </head>
   <body>
     <main>
+      <h1>Parcial #1 HCG</h1>
+      <input type="checkbox" id="Trasladar" name="Trasladar" value="true">
+      <label for="Trasladar">Trasladar</label>
+      <form action="">
+        <div>
+          <input type="radio" id="Cuadrado" name="Figura" value="Cuadrado">
+          <label for="Cuadrado">Cuadrado</label>
+          <input type="radio" id="Rectangulo" name="Figura" value="Rectangulo">
+          <label for="Rectangulo">Rectangulo</label>
+
+        </div>
+      </form>
     </main>
     <script src="sketch.js"></script>
-  
-
 </body></html>
